examples/invalid/16_tuple_type.lane
// invalid: tuple syntax requires at least two items
module Examples.Invalid16

pub let value : (Int,) = (1,)
